<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
		<TextView android:text="Complete " android:id="@+id/TotalCountLabel"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
			
		<TextView android:text="0" android:id="@+id/TotalCount"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>	
	</LinearLayout>
	<Button android:text="@string/start" android:id="@+id/startBtn"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:onClick="startTimer"></Button>

	<Button android:text="@string/end" android:id="@+id/endBtn"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:onClick="endTimer" android:enabled="false"></Button>

	<EditText android:text="" android:id="@+id/manualEntry"
		android:layout_width="120dp" android:layout_height="wrap_content"
		android:imeOptions="actionDone" android:imeActionLabel="@string/manual_entry_label"
		android:visibility="gone"
		android:inputType="number"
		android:enabled="false"></EditText>

	<Button android:text="@string/done" android:id="@+id/Done"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="25sp" android:onClick="done"
		android:visibility="gone"
		android:enabled="false"></Button>
		

</LinearLayout>
