<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="match_parent"
		android:layout_height="match_parent" android:layout_gravity="center_horizontal"
		android:padding="20dp">
  		<TextView android:layout_width="match_parent" android:layout_height="50dp"
  			android:text="Setup" android:background="@drawable/btn_default_normal_disable"
  			android:textSize="20dp"
  			android:id="@+id/ExerciseLabel"
  			style="@style/whiteDropShadow" />
  			
  		
  		<LinearLayout android:id="@+id/HomeSummary"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:visibility="invisible">
	
			<TextView 
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/HomeWeekLabel" android:text="@string/week"></TextView>
	
			<TextView android:layout_width="wrap_content" android:id="@+id/HomeCurrentWeek"
				android:text="0" android:layout_height="fill_parent" android:gravity="top"
				android:textSize="40sp"></TextView>
	
			<TextView 
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/HomeDayLabel" android:text="@string/day" android:paddingLeft="25dp"></TextView>
	
			<TextView 
				android:layout_width="wrap_content" android:id="@+id/HomeCurrentDay"
				android:text="0" android:textSize="40sp" android:layout_height="fill_parent" android:gravity="top"></TextView>
	
			<TextView 
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/HomeLevelLabel" android:text="@string/level"
				android:paddingLeft="22dp"></TextView>
	
			<TextView 
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="40sp" android:id="@+id/HomeCurrentLevel"
				android:text="Lv" ></TextView>
		</LinearLayout>
  		
  		<Spinner android:id="@+id/dayWeekSelector"
					 android:choiceMode="singleChoice" 
					 android:layout_width="fill_parent" android:layout_height="50dp"
					 android:prompt="@string/week_day_select_msg"
					 >
		
		</Spinner>
		<Spinner android:id="@+id/levelSelector"
				android:choiceMode="singleChoice"
				android:layout_width="fill_parent"
				android:layout_height="50dp" 
				android:prompt="@string/level_select_msg" />
  
  		<Button android:layout_height="wrap_content" android:id="@+id/ActivityButton"
			android:text="Start" android:gravity="center_horizontal"
			android:layout_width="fill_parent" android:onClick="doActivity"></Button>
  		
  		<Button android:layout_height="wrap_content" android:id="@+id/FinalButton"
			android:text="Final Test" android:layout_width="fill_parent"
			android:gravity="center_horizontal" android:onClick="doFinalTest"
			android:enabled="false"></Button>
			
		<Button android:layout_height="wrap_content" android:id="@+id/WorkoutButton"
			android:layout_width="fill_parent" android:gravity="center_horizontal"
			android:text="Progress" android:onClick="showProgress"></Button>	
  		
  		
</LinearLayout>
