<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="20dip" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">
	
	<LinearLayout android:padding="10dp" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical"
		android:background="@drawable/btn_default_normal_disable" >
		<TextView android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/TimeLeft"
			android:text="Time Left" android:textSize="35sp" android:gravity="center" android:layout_gravity="center"
			style="@style/whiteDropShadow"></TextView>
			
		<TextView android:text="Take this time to recover between sets."
			android:id="@+id/restInstructions" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center" android:gravity="center" 
			android:textSize="15sp"></TextView>
			
		<TextView android:text="0 of 0 sets" android:id="@+id/CompletionRatio"
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:layout_gravity="center" 
			android:textSize="20sp"
			style="@style/whiteDropShadow"/>
			
		<TextView android:text="@string/count_to_go" android:id="@+id/CountToGo"
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:layout_gravity="center" 
			android:textSize="20sp"
			style="@style/whiteDropShadow"/>
			
		<TextView android:id="@+id/CountForTest"
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:gravity="center" 
			android:textSize="20sp"
			style="@style/whiteDropShadow"
			android:text="@string/is_test_msg"
			android:visibility="gone"/>
			
	</LinearLayout>
			<TextView android:text="@string/skip_rest_msg" android:layout_width="fill_parent" android:layout_height="fill_parent" 
					android:textSize="15sp"
					android:gravity="center_horizontal|bottom"
					/>
</LinearLayout>
